psalmtox-music Institute

--- a/psalmtox music institute/index.html
+++ b/psalmtox music institute/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>University Website</title>
+    <title>Psalmtox Music | The Best Music Institute in Lagos Nigeriae</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,6 +45,14 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       <div class="row">
         <div class="course-col">
+          <h3>Beginner</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
+             repudiandae soluta exercitationem minus libero magnam, aspernatur, 
+             quidem dolor ex aut quibusdam!
+          </p>
+        </div>
+        <div class="course-col">
           <h3>Intermediate</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
              Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
@@ -53,15 +61,7 @@
           </p>
         </div>
         <div class="course-col">
-          <h3>Degree</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-             Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
-             repudiandae soluta exercitationem minus libero magnam, aspernatur, 
-             quidem dolor ex aut quibusdam!
-          </p>
-        </div>
-        <div class="course-col">
-          <h3>Post Graduation</h3>
+          <h3>Advanced</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
              Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
              repudiandae soluta exercitationem minus libero magnam, aspernatur, 
@@ -72,7 +72,7 @@
     </section>
 <!-- campus -->
     <section class="campus">
-      <h1>Our Global Campus</h1>
+      <h1>Our Campus</h1>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
       <div class="row">
         <div class="campus-col">
@@ -103,17 +103,17 @@
       <div class="row">
         <div class="facilities-col">
           <img src="./images/thelonious-sphere-monk-1281515_1280.jpg" alt="">
-          <h3>World Class Library</h3>
+          <h3>World Class Music Lab</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
         </div>
         <div class="facilities-col">
           <img src="./images/man-with-dreads-jamaica.jpg" alt="">
-          <h3>Largest Play Ground</h3>
+          <h3>Standard Music Room</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
         </div>
         <div class="facilities-col">
           <img src="./images/portrait-young-boy-school-student.jpg" alt="">
-          <h3>Tasty And Healthy Food</h3>
+          <h3>World Class Instructors</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
         </div>
       </div>
@@ -126,10 +126,10 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       <div class="row">
         <div class="testimonial-col">
-          <img src="./images/user1.jpg" alt="">
+          <img src="./images/" alt="">
           <div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam, culpa vitae quo quis placeat iure corporis debitis excepturi hic reiciendis?</p>
-          <h3>Zaur Barkley</h3>
+          <h3>Kolawole Johnson</h3>
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
@@ -138,10 +138,10 @@
           </div>
         </div>
         <div class="testimonial-col">
-          <img src="./images/user2.jpg" alt="">
+          <img src="./images/" alt="">
           <div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam, culpa vitae quo quis placeat iure corporis debitis excepturi hic reiciendis?</p>
-          <h3>Dave Barkley</h3>
+          <h3>James</h3>
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
@@ -170,7 +170,7 @@
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-linkedin"></i>
       </div>
-      <p>Made Width <i class="fa-solid fa-heart"></i> by Me Papuna</p>
+      <p>Psalmtox Music Institute 2024</i> </p>
     </section>
 
     <script src="script.js"></script>
