--- a/psalmtox music institute/index.html
+++ b/psalmtox music institute/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Psalmtox Music | The Best Music Institute in Lagos Nigeriae</title>
+    <title>Psalmtox Music | The Best Music Institute in Lagos Nigeria</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,7 +45,7 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       <div class="row">
         <div class="course-col">
-          <h3>Beginner</h3>
+          <h3>Basic Course In Music</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
              Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
              repudiandae soluta exercitationem minus libero magnam, aspernatur, 
@@ -53,7 +53,7 @@
           </p>
         </div>
         <div class="course-col">
-          <h3>Intermediate</h3>
+          <h3>Diploma In Music</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
              Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
              repudiandae soluta exercitationem minus libero magnam, aspernatur, 
@@ -61,7 +61,7 @@
           </p>
         </div>
         <div class="course-col">
-          <h3>Advanced</h3>
+          <h3>Advanced Diploma In Music</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
              Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
              repudiandae soluta exercitationem minus libero magnam, aspernatur, 
@@ -102,19 +102,19 @@
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       <div class="row">
         <div class="facilities-col">
-          <img src="./images/thelonious-sphere-monk-1281515_1280.jpg" alt="">
-          <h3>World Class Music Lab</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
+          <img src="./images/music-1290087_1280.jpg" alt="">
+          <h3>Classrooms and Studios</h3>
+          <p> Classrooms are where formal instruction takes place, led by experienced faculty members. Studios may refer to specialized rooms for individual or small group lessons, equipped with audio-visual technology or specific instruments tailored to the curriculum.</p>
         </div>
         <div class="facilities-col">
-          <img src="./images/man-with-dreads-jamaica.jpg" alt="">
-          <h3>Standard Music Room</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
+          <img src="./images/piano-1655558_1280.jpg" alt="">
+          <h3>Music Library</h3>
+          <p>A resource center housing a vast collection of sheet music, books, recordings, and digital materials relevant to music education and research. It provides students with access to a wide range of musical repertoire and academic resources to support their studies.</p>
         </div>
         <div class="facilities-col">
-          <img src="./images/portrait-young-boy-school-student.jpg" alt="">
-          <h3>World Class Instructors</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
+          <img src="./images/mic-1867121_1280.jpg" alt="">
+          <h3>Practice Equipment</h3>
+          <p> Additional tools and equipment provided to aid students in their practice routines. This may include metronomes, music stands, tuners, recording devices, or software applications designed to enhance learning and performance.</p>
         </div>
       </div>
     </section>
@@ -161,17 +161,55 @@
 
     <!--------- footer --------->
 
-    <section class="footer">
-      <h4>About Us</h4>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error asperiores vero vel incidunt sit!</p>
-      <div class="icons">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
+    <footer>
+      <div class="footer-col">
+        <h3>Lifestyle</h3>
+        <li>Fashion & Health</li>
+        <li>African Beauty</li>
+        <li>Relations & Weddings</li>
+        <li>Arts & Culture</li>
       </div>
-      <p>Psalmtox Music Institute 2024</i> </p>
-    </section>
+  
+      <div class="footer-col">
+        <h3>Music Events</h3>
+        <li>Concerts</li>
+        <li>Performance</li>
+        <li>Celebrities</li>
+        <li>Trending</li>
+      </div>
+  
+      <div class="footer-col">
+        <h3>Entertainment</h3>
+        <li>Music</li>
+        <li>Movies</li>
+        <li>Celebrities</li>
+        <li>Awards</li>
+      </div>
+  
+      
+  
+      <div class="footer-col">
+        <h3>Newsletter</h3>
+        <p>You can trust us. we only send promo offers.</p>
+  
+        <div class="subscribe">
+          <input type="email" placeholder="Your email Address">
+          <a href="#" class="yellow">SUBSCRIBE</a>
+        </div>
+      </div>
+  
+      <div class="copyright">
+        <p>
+          58b, Kudirat Abiola way Ikeja, Lagos Nigeria
+© 2024 Psalmtox Music Institute. All Rights Reserved.
+        </p>
+        <div class="pro-links">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin-in"></i>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
