--- a/psalmtox music institute/about.html
+++ b/psalmtox music institute/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>University Website</title>
+    <title>Psalmtox Music | The Best Music Institute in Lagos Nigeria</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,9 +13,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <body>
-    <section class="sub-header">
+    <section class="header">
       <nav>
-        <a href="index.html"><img src="./images/logo.png" alt="" /></a>
+        <a href="index.html"><img src="./images/watermark.png" alt="" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa-solid fa fa-xmark" onclick="hideMenu()"></i>
           <ul>
@@ -28,7 +28,14 @@
         </div>
         <i class="fa-solid fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>About Us</h1>
+      <div class="text-box">
+        <h1>Discover the Premier & Best Music School in Lagos</h1>
+        <p>
+          Our experienced faculty will guide you through performance, theory, composition,<br> and industry insights,
+                preparing you for a successful career in our music school
+        </p>
+        <a href="" class="hero-btn">Read More About Us</a>
+      </div>
     </section>
 
     <!-- about us content -->
@@ -36,12 +43,12 @@
     <section class="about-us">
       <div class="row" >
         <div class="about-col" >
-          <h1>We are the world's largest University</h1>
+          <h1>We are the best Music college in Lagos Nigeria</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus beatae assumenda eaque debitis illum recusandae cumque. Blanditiis fugit, repellat ipsam temporibus corrupti totam voluptate laboriosam impedit molestias asperiores iusto voluptates, corporis necessitatibus exercitationem cupiditate aliquam minima. Optio exercitationem error dignissimos tenetur eius aspernatur, commodi, obcaecati doloremque qui quibusdam nam. Commodi!</p>
           <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
-          <img src="images/about.jpg" alt="">
+          <img src="images/lady-4628418_1280.jpg" alt="">
         </div>
       </div>
     </section>
@@ -49,15 +56,15 @@
 
 
     <section class="footer">
-      <h4>About Us</h4>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error asperiores vero vel incidunt sit!</p>
+     
       <div class="icons">
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-linkedin"></i>
       </div>
-      <p>Made Width <i class="fa-solid fa-heart"></i> by Me Papuna</p>
+      <p> 58b, Kudirat Abiola way Ikeja, Lagos Nigeria
+        © 2024 Psalmtox Music Institute. All Rights Reserved.</p>
     </section>
 
     <script src="script.js"></script>
