--- a/psalmtox music institute/course.html
+++ b/psalmtox music institute/course.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>University Website</title>
+    <title>Psalmtox Music | The Best Music Institute in Lagos Nigeria</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,9 +13,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <body>
-    <section class="sub-header">
+    <section class="header">
       <nav>
-        <a href="index.html"><img src="./images/logo.png" alt="" /></a>
+        <a href="index.html"><img src="./images/watermark.png" alt="" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa-solid fa fa-xmark" onclick="hideMenu()"></i>
           <ul>
@@ -28,7 +28,9 @@
         </div>
         <i class="fa-solid fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>Our Courses</h1>
+      <div class="text-box">
+        <h1>Our Courses</h1>
+      </div>
     </section>
 
    <!--course-->
@@ -38,6 +40,14 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <div class="row">
       <div class="course-col">
+        <h3>Beginner</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+           Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
+           repudiandae soluta exercitationem minus libero magnam, aspernatur, 
+           quidem dolor ex aut quibusdam!
+        </p>
+      </div>
+      <div class="course-col">
         <h3>Intermediate</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
            Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
@@ -46,15 +56,7 @@
         </p>
       </div>
       <div class="course-col">
-        <h3>Degree</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-           Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
-           repudiandae soluta exercitationem minus libero magnam, aspernatur, 
-           quidem dolor ex aut quibusdam!
-        </p>
-      </div>
-      <div class="course-col">
-        <h3>Post Graduation</h3>
+        <h3>Advanced Diploma</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
            Itaque voluptatibus sit quia hic aliquam nam! Doloremque cumque placeat, 
            repudiandae soluta exercitationem minus libero magnam, aspernatur, 
@@ -71,18 +73,18 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
     <div class="row">
       <div class="facilities-col">
-        <img src="./images/library.png" alt="">
-        <h3>World Class Library</h3>
+        <img src="./images/" alt="">
+        <h3>Recital Hall</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
       </div>
       <div class="facilities-col">
-        <img src="./images/basketball.png" alt="">
-        <h3>Largest Play Ground</h3>
+        <img src="./images/" alt="">
+        <h3>Music Room</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
       </div>
       <div class="facilities-col">
-        <img src="./images/cafeteria.png" alt="">
-        <h3>Tasty And Healthy Food</h3>
+        <img src="./images/" alt="">
+        <h3>Performance</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit delectus, voluptate fuga blanditiis saepe mollitia odio accusantium nulla reprehenderit vero?</p>
       </div>
     </div>
@@ -99,7 +101,8 @@
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-linkedin"></i>
       </div>
-      <p>Made Width <i class="fa-solid fa-heart"></i> by Me Papuna</p>
+      <p> 58b, Kudirat Abiola way Ikeja, Lagos Nigeria
+        © 2024 Psalmtox Music Institute. All Rights Reserved.</p>
     </section>
 
     <script src="script.js"></script>
