--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a href="./index.html">HOME</a></li>
               <li><a href="./about.html">ABOUT</a></li>
               <li><a href="./blog.html">BLOG</a></li>
-              <li class="dropdown"> <a href="./course.html" class="dropdown-toggle">COURSES</a></li>
+              <li><a href="./course.html">COURSES</a></li>
               <li><a href="./contact.html">CONTACT</a></li>
               <li class="apply"><a href="#">APPLY NOW</a></li>
             </ul>
