--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
               <li><a href="./index.html">HOME</a></li>
               <li><a href="./about.html">ABOUT</a></li>
               <li><a href="./blog.html">BLOG</a></li>
-              <li><a href="./course.html">COURSES</a></li>
+              <li class="dropdown">
+                <a href="./course.html" class="dropdown-toggle">COURSES</a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">BASIC MUSIC COURSES</a></li>
+                  <li><a href="#">DIPLOMA IN MUSIC</a></li>
+                  <li><a href="#">Advanced Diploma</a></li>
+                  <li><a href="#">CHURCH MUSIC MINISTRY TRAINING</a></li>
+                </ul>
+              </li>
               <li><a href="./contact.html">CONTACT</a></li>
               <li class="apply"><a href="https://docs.google.com/forms/d/e/1FAIpQLScN_ufumef00gdPW-sDYCN_UwdMTFyNMmrP7aIkw6VEYP_8Kw/viewform?pli=1&pli=1&fbzx=-7484828331686417998">APPLY NOW</a></li>
             </ul>
