--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
  <!-- Facilities -->
 
     <section class="facilities">
-      <h1>Our Facilities</h1>
+      <h1>Our Faculties</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       <div class="row">
         <div class="facilities-col">
-          <img src="./images/music-1290087_1280.jpg" alt="">
+          <img src="./images/" alt="">
           <h3>Classrooms and Studios</h3>
           <p> Classrooms are where formal instruction takes place, led by experienced faculty members. Studios may refer to specialized rooms for individual or small group lessons, equipped with audio-visual technology or specific instruments tailored to the curriculum.</p>
         </div>
         <div class="facilities-col">
-          <img src="./images/piano-1655558_1280.jpg" alt="">
+          <img src="./images/Ceo2.jpg" alt="">
           <h3>Music Library</h3>
           <p>A resource center housing a vast collection of sheet music, books, recordings, and digital materials relevant to music education and research. It provides students with access to a wide range of musical repertoire and academic resources to support their studies.</p>
         </div>
         <div class="facilities-col">
-          <img src="./images/mic-1867121_1280.jpg" alt="">
+          <img src="./images/mic-" alt="">
           <h3>Practice Equipment</h3>
           <p> Additional tools and equipment provided to aid students in their practice routines. This may include metronomes, music stands, tuners, recording devices, or software applications designed to enhance learning and performance.</p>
         </div>
