--- a/Dip perform.html
+++ b/Dip perform.html
@@ -35,22 +35,22 @@
                   <li class="dropdown-item">
                     <a href="#" class="dropdown-toggle" onclick="toggleSubMenu(event)">DIPLOMA IN MUSIC</a>
                     <ul class="dropdown-menu2">
-                      <li><a href="#">Diploma In Music Performance</a></li>
-                      <li><a href="#">Diploma In Music Production</a></li>
-                      <li><a href="#">Diploma In Concert Production</a></li>
+                      <li><a href="Dip perform.html">Diploma In Music Performance</a></li>
+                      <li><a href="Dip Music prod.html">Diploma In Music Production</a></li>
+                      <li><a href="Dip in Concert.html">Diploma In Concert Production</a></li>
                     </ul>
                   </li>
                   <li class="dropdown-item">
                     <a href="#" class="dropdown-toggle" onclick="toggleSubMenu(event)">ADVANCED DIPLOMA</a>
                     <ul class="dropdown-menu2">
-                      <li><a href="#">Adv. Diploma In Concert Production</a></li>
-                      <li><a href="#">Adv. Diploma In Live Production</a></li>
-                      <li><a href="#">Adv. Diploma In Digital & Audio Tech</a></li>
-                      <li><a href="#">Adv. Diploma In Music Business</a></li>
-                      <li><a href="#">Adv. Diploma In Music Performance</a></li>
+                      <li><a href="Adv concert production.html">Adv. Diploma In Concert Production</a></li>
+                      <li><a href="AdvLive & Sound prod.html">Adv. Diploma In Live Production</a></li>
+                      <li><a href="Adv audio.html">Adv. Diploma In Digital & Audio Tech</a></li>
+                      <li><a href="avd music biz.html">Adv. Diploma In Music Business</a></li>
+                      <li><a href="Adv music perform.html">Adv. Diploma In Music Performance</a></li>
                      </ul>
                   </li>
-                  <li><a href="#">CHURCH MUSIC MINISTRY TRAINING</a></li>
+                  <li><a href="ministry.html">CHURCH MUSIC MINISTRY TRAINING</a></li>
                 </ul>
               </li>
               <li><a href="./contact.html">CONTACT</a></li>
