--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
     <section class="cta">
       <h1>Learn More About Our Summer Lessons</h1>
-      <a href="https://wa.me/c/2347087654896" class="hero-btn">WHATSAPP</a>
+      <a href="https://wa.me/c/2348157977458" class="hero-btn">WHATSAPP</a>
       <div class="advertisement">
             
         <img src="images/summer2.jpg" alt="Advertisement Image 2" class="animated-img">
@@ -221,6 +221,14 @@
   
       <div class="copyright">
         <p>
+
+          <p>
+  We also collaborate with
+  <a href="https://www.joshpeemusiccompany.com" target="_blank" rel="noopener noreferrer">
+    Joshpee Music Company
+  </a>,
+  a creative hub based on Lagos Island that supports young talents in fashion, art, and music.
+</p>
           58b, Kudirat Abiola way Ikeja, Lagos Nigeria
 © 2024 Psalmtox Music Institute. All Rights Reserved.
         </p>
@@ -237,3 +245,4 @@
 
   </body>
 </html>
+
