--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
           <p>
   We also collaborate with
-  <a href="https://www.joshpeemusiccompany.com" target="_blank" rel="noopener noreferrer">
+  <a href="https://www.joshpeemusiccompany.com.ng" target="_blank" rel="noopener noreferrer">
     Joshpee Music Company
   </a>,
   a creative hub based on Lagos Island that supports young talents in fashion, art, and music.
@@ -245,4 +245,5 @@
 
   </body>
 </html>
+
 
