--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <p>
   We also collaborate with
   <a href="https://www.joshpeemusiccompany.com.ng" target="_blank" rel="noopener noreferrer">
-    Joshpee Music Company
+    <strong>Joshpee Music Company</strong>
   </a>,
   a creative hub based on Lagos Island that supports young talents in fashion, art, and music.
 </p>
@@ -245,5 +245,6 @@
 
   </body>
 </html>
+
 
 
