--- a/index.html
+++ b/index.html
@@ -223,12 +223,7 @@
         <p>
 
           <p>
-  We also collaborate with
-  <a href="https://www.joshpeemusiccompany.com.ng" target="_blank" rel="noopener noreferrer">
-    <strong>Joshpee Music Company</strong>
-  </a>,
-  a creative hub based on Lagos Island that supports young talents in fashion, art, and music.
-</p>
+  <p>We collaborate with <a href="https://joshpeemusiccompany.com.ng" target="_blank">JoshPee Music School</a>, a leading music academy on Lagos Island offering piano, guitar, and drum lessons for all ages.</p>
           58b, Kudirat Abiola way Ikeja, Lagos Nigeria
 © 2024 Psalmtox Music Institute. All Rights Reserved.
         </p>
@@ -245,6 +240,7 @@
 
   </body>
 </html>
+
 
 
 
