--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>
 
           <p>
-  <p>We collaborate with <a href="https://joshpeemusiccompany.com.ng" target="_blank">JoshPee Music School</a>, a leading music academy on Lagos Island offering piano, guitar, and drum lessons for all ages.</p>
+  <p>We collaborate with <strong><a href="https://joshpeemusiccompany.com.ng" target="_blank"></strong>JoshPee Music School</a>, a leading music academy on Lagos Island offering piano, guitar, and drum lessons for all ages.</p>
           58b, Kudirat Abiola way Ikeja, Lagos Nigeria
 © 2024 Psalmtox Music Institute. All Rights Reserved.
         </p>
@@ -240,6 +240,7 @@
 
   </body>
 </html>
+
 
 
 
