--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             Our experienced faculty will guide you through performance, theory, composition,
             <br> and industry insights, preparing you for a successful career in our music school
           </p>
+           <a href="https://wa.me/c/2348157977458" class="hero-btn">WHATSAPP</a>
           <a href="#" class="hero-btn">Visit Us</a>
         </div>
       </section>
@@ -240,6 +241,7 @@
 
   </body>
 </html>
+
 
 
 
