--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             Our experienced faculty will guide you through performance, theory, composition,
             <br> and industry insights, preparing you for a successful career in our music school
           </p>
-           <a href="https://wa.me/c/2348157977458" class="hero-btn">WHATSAPP</a>
-          <a href="#" class="hero-btn">Visit Us</a>
+           <a href="https://wa.me/c/2348157977458" class="hero-btn">Contact Us</a>
+        
         </div>
       </section>
       
@@ -224,7 +224,6 @@
         <p>
 
           <p>
-  <p>We collaborate with <strong><a href="https://joshpeemusiccompany.com.ng" target="_blank"></strong>JoshPee Music School</a>, a leading music academy on Lagos Island offering piano, guitar, and drum lessons for all ages.</p>
           58b, Kudirat Abiola way Ikeja, Lagos Nigeria
 © 2024 Psalmtox Music Institute. All Rights Reserved.
         </p>
@@ -241,6 +240,7 @@
 
   </body>
 </html>
+
 
 
 
